--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
           <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
           <title>Final Project Elina Jaiani</title>
           <meta name="author" content="EJ" />
-          <meta name="Resource-type" content="Document" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
  
           <link rel="stylesheet" href="finalproject.css" />
