--- a/finalproject.html
+++ b/finalproject.html
@@ -127,7 +127,7 @@
             </div>
             <div class="section">
               <div class="intro">
-                <h1>See our work</h1>
+                <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/projects.html"> <h1>See our work </h1></a>
                 <p> We provides strategy, design, branding, marketing, advertising, development and technology services </p>
               </div>
             </div>
