--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.mokarico.com/en/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -138,7 +138,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.airinuit.com/en" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -147,7 +147,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.pdpaola.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -156,7 +156,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://99designs.com/inspiration/branding/black-and-white" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -165,7 +165,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.greenlife-cookware.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -174,7 +174,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://creativemess.ca/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -183,7 +183,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.flickr.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -192,7 +192,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.dress-meapp.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -201,7 +201,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="http://fandbfood.com/restaurant-captain/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -210,7 +210,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.moodfabrics.com/blog/moods-ultimate-guide-to-sewing-blogs/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -219,7 +219,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://designwizard.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -228,7 +228,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://citywinery.com/Online/default.asp" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -237,7 +237,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.starbucks.com/" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -246,7 +246,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://www.wayfair.com/keyword.php?keyword=kitchen+wooden+spoons" target="_blank">Launch</a>
             </div>
           </div>
           <div class="item">
@@ -255,7 +255,7 @@
               alt=""
             />
             <div class="action">
-              <a href="#">Launch</a>
+              <a href="https://savyagency.com/case-studies/" target="_blank">Launch</a>
             </div>
           </div>
           
