--- a/Landing/finalproject.html
+++ b/Landing/finalproject.html
@@ -100,7 +100,7 @@
          </div>
          <div class="section">
             <div class="intro">
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/projects%20and%20works/projects.html">
+               <a href="projects and works/projects.html">
                   <h1>See our work </h1>
                </a>
                <p> We provides strategy, design, branding, marketing, advertising, development and technology services </p>
@@ -108,7 +108,7 @@
          </div>
          <div class="section" id="section3">
             <div class="intro">
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h1>Contact us</h1>
                </a>
                <p>Our clients seek us for creative, actionable, big ideas, and to partner with a digital agency comprised of people who they like and who are easy to work with.</p>
