--- a/Landing/projects and works/projects.html
+++ b/Landing/projects and works/projects.html
@@ -46,7 +46,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>Design</h3>
                </a>
                <p>
@@ -60,7 +60,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>Development</h3>
                </a>
                <p>
@@ -74,7 +74,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>SEO</h3>
                </a>
                <p>
@@ -88,7 +88,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>Marketing</h3>
                </a>
                <p>
@@ -102,7 +102,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>App Development</h3>
                </a>
                <p>
@@ -116,7 +116,7 @@
                      alt=""
                      />
                </div>
-               <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>Error Fixing</h3>
                </a>
                <p>
@@ -131,7 +131,7 @@
             <p>
                What do a real estate firm, a family-owned food brand, a healthcare startup, and the nation’s first functional CBD brand all have in commmon? The drive to create something spectacular.
             </p>
-            <a href="file:///Users/elinajaiani/Documents/GitHub/final-project/Landing/projects%20and%20works/price%20list/price.html" target="_blank">
+            <a href="projects and works/price list/price.html" target="_blank">
                <h1> Packages price list</h1>
             </a>
          </div>
