--- a/Landing/projects and works/projects.html
+++ b/Landing/projects and works/projects.html
@@ -131,7 +131,7 @@
             <p>
                What do a real estate firm, a family-owned food brand, a healthcare startup, and the nation’s first functional CBD brand all have in commmon? The drive to create something spectacular.
             </p>
-            <a href="projects and works/price list/price.html" target="_blank">
+            <a href="price list/price.html" target="_blank">
                <h1> Packages price list</h1>
             </a>
          </div>
