--- a/Landing/projects and works/projects.html
+++ b/Landing/projects and works/projects.html
@@ -46,7 +46,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="contact.html" target="_blank">
                   <h3>Design</h3>
                </a>
                <p>
