--- a/Landing/projects and works/projects.html
+++ b/Landing/projects and works/projects.html
@@ -102,7 +102,7 @@
                      alt=""
                      />
                </div>
-               <a href="landing/Contact/contact.html" target="_blank">
+               <a href="Contact/contact.html" target="_blank">
                   <h3>App Development</h3>
                </a>
                <p>
