--- a/Landing/projects and works/projects.html
+++ b/Landing/projects and works/projects.html
@@ -46,7 +46,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>Design</h3>
                </a>
                <p>
@@ -60,7 +60,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>Development</h3>
                </a>
                <p>
@@ -74,7 +74,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>SEO</h3>
                </a>
                <p>
@@ -88,7 +88,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>Marketing</h3>
                </a>
                <p>
@@ -102,7 +102,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>App Development</h3>
                </a>
                <p>
@@ -116,7 +116,7 @@
                      alt=""
                      />
                </div>
-               <a href="Contact/contact.html" target="_blank">
+               <a href="../Contact/contact.html" target="_blank">
                   <h3>Error Fixing</h3>
                </a>
                <p>
